fix: add padding and gaps to align icons and text

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -18,6 +18,8 @@ body {
 
 .modal {
   display: flex;
+  gap: 16px;
+  padding: 16px;
   background: white;
   width: 480px;
   border-radius: 10px;
@@ -25,7 +27,7 @@ body {
 }
 
 .icon {
-flex-shrink: 0;
+  flex-shrink: 0;
   color: royalblue;
   font-size: 26px;
   font-weight: 700;
@@ -36,6 +38,13 @@ flex-shrink: 0;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  font-weight: bold;
+  font-size: larger;
 }
 
 .close-button {
